feat: alteração do tema do código

--- a/index.html
+++ b/index.html
@@ -2,138 +2,96 @@
 <html>
 
 <head>
-  <title>Desenvolvimento Web</title>
+  <title>SKINS CSGO</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 <body>
   <header>
-    <h1>Desenvolvimento Web</h1>
+    <h1>Skins CSGO</h1>
     <nav>
       <ul>
-        <li><a href="#marks">Marcadores</a></li>
-        <li><a href="#lists">Lista</a></li>
-        <li><a href="#images">Imagens</a></li>
-        <li><a href="#tables">Tabelas</a></li>
-        <li><a href="form.html">Formulário</a></li>
+        <li><a href="#about">Sobre</a></li>
+        <li><a href="#skins">Skins</a></li>
+        <li><a href="#box">Caixa</a></li>
+        <li><a href="#search">Buscar Skin</a></li>
       </ul>
     </nav>
   </header>
   <main>
-    <section id="marks">
-      <h2>Marcadores</h2>
-      <p>Nessa seção veremos alguns marcadores pelo html</p>
+    <section>
+      <h2>Motivo</h2>
       <p>
-        <b>negrito</b>,
-        <i>itálico</i>,
-        <u>sublinhado</u>,
-        <s>traçado</s>,
-        texto <sub>subescrito</sub>,
-        texto <sup>sobrescrito</sup>.
+        O objetivo de dessa página é mostrar os conhecimentos adquiridos durante a disciplina de <b>Desenvolvimento
+          Web</b>. Então aqui vou mostrar um pouco de Skins de CS, algo que gosto bastante.
       </p>
     </section>
-    <section id="lists">
-      <h2>Listas</h2>
-      <p>Nessa seção veremos algumas listas dentro do html</p>
-      <h3>Listas não ordenadas</h3>
-      <ul>
-        <li>item</li>
-        <li>subitem</li>
-        <li>subitem</li>
-      </ul>
-      <li>item</li>
-      <ol>
-        <li>subitem</li>
-        <li>subitem</li>
-      </ol>
-      <li>item</li>
-      </ul>
-      <h3>Listas ordenadas</h3>
-      <ol>
-        <li>item</li>
-        <ul></ul> style="list-style-image: url('flogo.png');">
-        <li>subitem</li>
-        <li>subitem</li>
-        </ul>
-        <li>item</li>
-        <ol>
-          <li>subitem</li>
-          <li>subitem</li>
-        </ol>
-        <li>item</li>
-      </ol>
-      <h3>Listas de definição</h3>
-      <dl>
-        <dt>manga</dt>
-        <dd>de camisa</dd>
-        <dd>fruta</dd>
-        <dd>separação de pasto</dd>
-        <dt>mandioca</dt>
-        <dt>aipim</dt>
-        <dt>macaxeira</dt>
-        <dd>raiz comestível</dd>
-      </dl>
+    <section id="about">
+      <h2>Sobre</h2>
+      <p>As skins do CSGO chegaram na atualização de 13 de agosto de 2013. Para devidas informações as skins são, de
+        acorodo com a Wikipedia, "Skin ou Pele é um visual alternativo dado a um programa computacional. Dessa forma,
+        todo software tem seu visual padrão e pode, se houver um suporte para isso, permitir que sua aparência seja
+        alterada por meio de skins pré-construídos." </p>
+      <p>Dentro do CSGO as skins elas podem ser de: <b>Armas</b>, <b>Personagens</b> e <b>Luvas</b>, além de outros
+        acessórios que podem ser inclusos, como emblemas. As skins elas podem ser vendidas/compradas por qualquer
+        jogador, permitindo assim existir um mercado dessas. Cada skin possui sua raridade, bem como seu preço dentro do
+        mercado. Existem skins extremamente raras e queridas, que fazem ter um preço extremamente alto como a: <a
+          href="">M4A4 - HOWL</a> e a <a href="">AWP - Dragon Lore</a>. Essas skins são queridas pelos jogadores e podem
+        custar mais de 10 a 15 mil doláres. Além disso, existem os <b>Stickers</b> que podem tornar tudo ainda mais
+        caro.</p>
+      <p>As skins elas possuem caracterísitcas, como: float, raridade. Elas são geradas dentro das caixas.</p>
     </section>
-    <section id="images">
-      <h2>Imagens</h2>
-      <p>Nessa seção veremos algumas imagens aqui no html</p>
+    <section id="skins">
+      <h2>SKINS</h2>
+      <p>Aqui então iremos ver as skins mais famosas e mais queridas pelos jogadores</p>
       <div>
         <figure>
-          <figcaption>Imagem 1</figcaption>
-          <img src="https://picsum.photos/100/150?random=1">
+          <figcaption>M4A4 - HOWL</figcaption>
+          <img src="https://static1-br.millenium.gg/articles/6/76/56/@/106059-m4a4-howl-article_image_d-1.jpg">
         </figure>
         <figure>
-          <figcaption>Imagem 2</figcaption>
-          <img src="https://picsum.photos/100/150?random=2">
+          <figcaption>AWP - Dragon Lore</figcaption>
+          <img
+            src="https://s2.glbimg.com/Yt1KyOropQxteSSgbgTlMgXfSxo=/0x0:1280x720/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_08fbf48bc0524877943fe86e43087e7a/internal_photos/bs/2019/Q/C/abgL3mSDWNqZpdoA8jhA/novo-projeto-75-.jpg">
         </figure>
         <figure>
-          <figcaption>Imagem 3</figcaption>
-          <img src="https://picsum.photos/100/150?random=3">
+          <figcaption>AK47 - Redline</figcaption>
+          <img src="https://pbs.twimg.com/media/EWIsEYqWAAEXRnc.jpg">
+        </figure>
+        <figure>
+          <figcaption>FACAS</figcaption>
+          <img src="https://i.ytimg.com/vi/orCmV--g2zA/mqdefault.jpg">
         </figure>
       </div>
+      <p>
+        As skins, como foi falado um pouco no sobre, possui características. As caracterísitcas são geradas e continuaram com ela no momento em que uma caixa é aberta. Para se conseguir uma SKIN no CSGO só há quatro  formas:
+        <ul>
+          <li>Dropando numa caixa</li>
+          <li>Fazendo trade</li>
+          <li>Dropando durante uma partida</li>
+          <li>Fazendo contrato de troca</li>
+        </ul>
+      </p>
     </section>
-    <section id="tables">
-      <h2>Tabelas</h2>
-      <p>Nessa seção veremos tabelas no html</p>
-      <table>
-        <tr>
-          <th></th>
-          <th>1</th>
-          <th>2</th>
-          <th>3</th>
-          <th>4</th>
-        </tr>
-        <tr>
-          <th>1</th>
-          <td rowspan="2">texto</td>
-          <td>texto</td>
-          <td>texto</td>
-          <td>texto</td>
-        </tr>
-        <tr>
-          <th>2</th>
-          <td>texto</td>
-          <td>texto</td>
-          <td>texto</td>
-        </tr>
-        <tr>
-          <th>3</th>
-          <td colspan="2">texto</td>
-          <td>texto</td>
-          <td>texto</td>
-        </tr>
-        <tr>
-          <th>4</th>
-          <td>texto</td>
-          <td>texto</td>
-          <td>texto</td>
-          <td>texto</td>
-        </tr>
-      </table>
+    <section id="box">
+      <h2>Caixa</h2>
+      <p>
+        <figure>
+          <figcaption>Caixa</figcaption>
+          <img src="" alt="">
+        </figure>
+        As caixas dentro do CSGO elas são feitas a apartir de OPERAÇÕES, que são eventos do CSGO, ou vem com alguma atualização. Cada caixa fica por um determinado tempo, até outra ser lançada. As caixas são dropadas durante o jogo 
+      </p>
+    </section>
+    <section id="search">
+      <h2>Pesquise sua SKIN</h2>
+      <form action="https://google.com/search" method="GET">
+          <input type="text" name="q" placeholder="search" value="Skin CSGO ">
+          <input type="submit" value="pesquisar">
+          <input type="reset" value="limpar">
+      </form>
     </section>
   </main>
-  <footer>
-  </footer>
 </body>
 
 </html>
