feat: informações sobre os atributos das skins

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <ul>
         <li><a href="#about">Sobre</a></li>
         <li><a href="#skins">Skins</a></li>
-        <li><a href="#box">Caixa</a></li>
+        <li><a href="#specification">Atributos das Skins</a></li>
         <li><a href="#search">Buscar Skin</a></li>
       </ul>
     </nav>
@@ -39,7 +39,6 @@
           href="">M4A4 - HOWL</a> e a <a href="">AWP - Dragon Lore</a>. Essas skins são queridas pelos jogadores e podem
         custar mais de 10 a 15 mil doláres. Além disso, existem os <b>Stickers</b> que podem tornar tudo ainda mais
         caro.</p>
-      <p>As skins elas possuem caracterísitcas, como: float, raridade. Elas são geradas dentro das caixas.</p>
     </section>
     <section id="skins">
       <h2>SKINS</h2>
@@ -66,22 +65,60 @@
       <p>
         As skins, como foi falado um pouco no sobre, possui características. As caracterísitcas são geradas e continuaram com ela no momento em que uma caixa é aberta. Para se conseguir uma SKIN no CSGO só há quatro  formas:
         <ul>
-          <li>Dropando numa caixa</li>
+          <li><h3>Dropando numa caixa</h3>
+            <p>
+              As caixas dentro do CSGO elas são feitas a apartir de OPERAÇÕES, que são eventos do CSGO, ou vem com alguma atualização. Cada caixa fica por um determinado tempo, até outra ser lançada. As caixas são dropadas durante o jogo 
+            </p>
+          </li>
+            
           <li>Fazendo trade</li>
           <li>Dropando durante uma partida</li>
           <li>Fazendo contrato de troca</li>
         </ul>
       </p>
     </section>
-    <section id="box">
-      <h2>Caixa</h2>
-      <p>
-        <figure>
-          <figcaption>Caixa</figcaption>
-          <img src="" alt="">
-        </figure>
-        As caixas dentro do CSGO elas são feitas a apartir de OPERAÇÕES, que são eventos do CSGO, ou vem com alguma atualização. Cada caixa fica por um determinado tempo, até outra ser lançada. As caixas são dropadas durante o jogo 
-      </p>
+    <section id="specification">
+      <h2>Atributos das skins</h2>
+      <p>Todas as skins possuem alguns atributos, dentre eles temos:</p>
+      <ol>
+        <li>
+          <h3>Float</h3>
+          <p>O Float ele é responsável pelo "desgaste" da skin, esse é feito a partir de um numero entre 0 e 1, onde zero é o menos desgastado possível e o 1 o mais desgastado possível. E dentre esses há nomes para derminados intervalos de float:
+            <ul>
+              <li>Battle-Scared (0 - 0.07)</li>
+              <li>Well-Worn (0.7 - 0.15)</li>
+              <li>Field-Test (0.15 - 0.38)</li>
+              <li>Minimal Wear (0.38 - 0.45)</li>
+              <li>Factory New (0.45 - 1)</li>
+            </ul>
+          </p>
+          <p>O float ele não só mostra o desgaste, mas também pode influenciar no brilho (ao invés de desgastar), pode também não afetar em nada em um determinado ponto e pode afetar também na coloração. Existem várias skins que possuem diferentes reações com a variação do float</p>
+        </li>
+        <li>
+          <h3>Pattern</h3>
+          <p>Existem skins que possuem patterns diferentes. As skins normalmente são baseadas em imagens e os patterns podem ser partes visíveis dessas imagens, ou quantidade de coloração (no caso das fades) etc. O pattern tem grande influência dentro de algumas skins, podendo deixar uma skin que já é cara, ainda mais cara. Existem skins que posseum milhares de patterns</p>
+        </li>
+        <li>
+          <h3>Raridade</h3>
+          <p>Ao dropar uma skin dentro de uma caixa, há um grau de raridade. Dentro do CS temos alguns tipos de raridade:</p>
+          <ol>
+            <li>Cinza - A menor raridade</li>
+            <li>Azul</li>
+            <li>Roxo</li>
+            <li>Rosa</li>
+            <li>Vermelho</li>
+            <li>Secreto</li>
+            <li>Contrabando</li>
+          </ol>
+          <p>
+            As que são possível ser dropadas em caixas são até a de raridade "Secreta", a única Skin que é de nível "Contrabando" é a mais cara do jogo: HOWL. Para saber mais <a href="https://www.skinwallet.com/br/csgo/m4a4-howl/#:~:text=A%20StatTrak%20M4A4%20Howl%20foi,estoques%20dos%20jogadores%2C%20subitamente%20aumentou.">CLICK AQUI</a>.
+          </p>
+          <p>
+            As de nível secretos são as Facas e Luvas, que são o item mais raro que pode ser tirado dentro de uma caixa. 
+          </p>
+        </li>
+      </ol>
+      <p>Para uma skin ser cara, ela precisa ter a combinação dos três acima e isso, somado a vontade do público de ter a skin, ela a preços altíssimos com skins sendo vendidas até à US$ 775 mil, onde essa foi uma skin chamda "Karambit - Blue Gem" que básicamente une tudo o que foi descrito acima. É uma skin de raridade Secreta, com um ótimo float e o melhor pattern</p>
     </section>
     <section id="search">
       <h2>Pesquise sua SKIN</h2>
