feat: preparando para criação do site utilizando bootstrap

--- a/exercicio2/index.html
+++ b/exercicio2/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>SKINS CSGO</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <!-- <link rel="stylesheet" type="text/css" href="styles.css"> -->
 </head>
 
 <body>
@@ -124,30 +124,28 @@
     <section id="price">
       <h2>Preço das Skins</h2>
       <p>Aqui iremos ver uma tabelinha que mostra preços de algumas skins e o quanto o mercado é bem grande a ponto de existir os valores que serão vistos</p>
-      <div>
-        <table>
-          <tr>
-            <th>Nome da Skin</th>
-            <td>Preço</td>
-          </tr>
-          <tr>
-            <th>AK47 - Porte de Elite (Field-Tested)</th>
-            <td>R$ 8,00</td>
-          </tr>
-          <tr>
-            <th>M4A1 - Printstream (Field-Tested)</th>
-            <td>R$ 700,00</td>
-          </tr>
-          <tr>
-            <th>AWP - Dragon Lore (Field-Tested)</th>
-            <td>R$ 12.000,00 - 15.000,00</td>
-          </tr>
-          <tr>
-            <th>M4A4 - HOWL (Field-Tested)</th>
-            <td>R$ 12.000,00 - 14.000,00</td>
-          </tr>
-        </table>
-      </div>
+      <table>
+        <tr>
+          <th>Nome da Skin</th>
+          <td>Preço</td>
+        </tr>
+        <tr>
+          <th>AK47 - Porte de Elite (Field-Tested)</th>
+          <td>R$ 8,00</td>
+        </tr>
+        <tr>
+          <th>M4A1 - Printstream (Field-Tested)</th>
+          <td>R$ 700,00</td>
+        </tr>
+        <tr>
+          <th>AWP - Dragon Lore (Field-Tested)</th>
+          <td>R$ 12.000,00 - 15.000,00</td>
+        </tr>
+        <tr>
+          <th>M4A4 - HOWL (Field-Tested)</th>
+          <td>R$ 12.000,00 - 14.000,00</td>
+        </tr>
+      </table>
     </section>
     <section id="search">
       <h2>Pesquise sua SKIN</h2>
@@ -156,7 +154,6 @@
           <input type="submit" value="pesquisar">
           <input type="reset" value="limpar">
       </form>
-      <a href="/exercicio2/index.html" >CLIQUE AQUI</a> para acessar a página com bootstrap
     </section>
   </main>
 </body>
