feat: preparando para criação do site utilizando bootstrap

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
           <input type="submit" value="pesquisar">
           <input type="reset" value="limpar">
       </form>
-      <a href="/exercicio2/index.html" >CLIQUE AQUI</a> para acessar a página com bootstrap
+      <a href="/devweb-202202-bsi/exercicio2/index.html" >CLIQUE AQUI</a> para acessar a página com bootstrap
     </section>
   </main>
 </body>
