feat: add bootstrap

--- a/exercicio2/index.html
+++ b/exercicio2/index.html
@@ -99,7 +99,7 @@
     <section class="container-fluid row" id="specification">
       <h2>Atributos das skins</h2>
       <p>Todas as skins possuem alguns atributos, dentre eles temos:</p>
-      <ol>
+      <ol class="list-unstyled">
         <li>
           <h3>Float</h3>
           <p>O Float ele é responsável pelo "desgaste" da skin, esse é feito a partir de um numero entre 0 e 1, onde
