--- a/exercicio5/meusPosts/index.html
+++ b/exercicio5/meusPosts/index.html
@@ -11,7 +11,7 @@
 		<header>
 			<nav>
 				<ul>
-					<a href="/home/index.html">Home</a>
+					<a href="../home/index.html">Home</a>
 				</ul>
 				<ul>
 					Meus Posts
