feat: criação de novo usuário

--- a/exercicio5/login/index.html
+++ b/exercicio5/login/index.html
@@ -19,6 +19,7 @@
         <input id="password" type="password">
       </div>
       <button id="signin">Entrar</button>
+      <a href="../signup/index.html">Cadastrar</a>
       <p class="error"></p>
     </div>
   </section>
