--- a/exercicio5/signup/index.html
+++ b/exercicio5/signup/index.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../style.css">
-  <title>Cadastro</title>
-</head>
-<body>
-  <section>
-    <div>
-      <div>
-        <p>Username:</p>
-        <input type="text">
-      </div>
-      <div>
-        <p>Password: </p>
-        <input type="password">
-      </div>
-      <button>Cadastrar</button>
-    </div>
-  </section>
-  <script src="script.js"></script>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="../style.css" />
+		<title>Cadastro</title>
+	</head>
+	<body>
+		<section>
+			<div>
+				<div>
+					<p>Username:</p>
+					<input id="username" type="text" />
+				</div>
+				<div>
+					<p>Password:</p>
+					<input id="password" type="password" />
+				</div>
+				<button id="signup">Cadastrar</button>
+				<p class="error"></p>
+			</div>
+		</section>
+		<script src="script.js"></script>
+	</body>
 </html>
