--- a/exercicio5/meusPosts/index.html
+++ b/exercicio5/meusPosts/index.html
@@ -17,7 +17,7 @@
 					Meus Posts
 				</ul>
 				<ul>
-					<a href="#">Criar Novo Post</a>
+					<a href="../criarPosts/index.html">Criar Novo Post</a>
 				</ul>
 				<ul>
 					<span id="username"></span>
